--- a/Colab Proyecto.ipynb
+++ b/Colab Proyecto.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "RSA .ipynb",
+      "name": "Chat con encriptación de clave pública RSA .ipynb",
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true
@@ -22,7 +22,7 @@
       },
       "source": [
         "# Chat con encriptación de clave pública RSA     \n",
-        "## Segunda entrega de proyecto\n",
+        "## Tercera entrega de proyecto\n",
         "## Matemáticas Discretas II\n",
         "\n",
         "Juan Camilo García Martínez \n",
@@ -38,6 +38,7 @@
       "source": [
         "## 1. Introducción\n",
         "\n",
+        "# Problema a resolver:\n",
         "Las\n",
         "plataformas de chat más populares suelen usar servidores intermediarios que se encargan de la\n",
         "transmisión de los datos. Si bien prometen no espiar o siquiera ser capaces de hacerlo debido al\n",
@@ -47,7 +48,17 @@
         "forma más directa, como por ejemplo, usando sockets, que no requieren un servidor intermedio.\n",
         "El problema es entonces la seguridad; el mensaje pasa por las diferentes capas de red tal y\n",
         "como se envió inicialmente y está sujeto a intrusión por parte de terceros. Es necesaria una\n",
-        "forma de encriptar el mensaje."
+        "forma de encriptar el mensaje.\n",
+        "\n",
+        "# Estado del arte:\n",
+        "El algoritma RSA ha sido utilizado en varias aplicaciones como Bluethoot, MasterCard, Visa y otros personajes dentro del e-commerce.\n",
+        "\n",
+        "Actualmente es aún utilizado en algunos buscadores web, email y otros canales de comunicación.\n",
+        "\n",
+        "En los VPNs para la comunicación entre el cliente y el servidor.\n",
+        "\n",
+        "Sin embargo no es muy utilizado actualmente en los sistemas más avanzados debido a que estos manipulan una cantidad considerable de información y a comparación de otros algoritmos de encriptación desarrollados posteriormente al RSA, este último queda rezagado en tiempo\n",
+        "\n"
       ]
     },
     {
@@ -203,7 +214,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QsLrG6dn3pCX",
-        "outputId": "9816bfaa-ab36-4ede-d03e-dc9191571ff9"
+        "outputId": "062c0505-e6c0-40c7-bfec-8e775bedaeb4"
       },
       "source": [
         "#Debido a que estos numeros con potencias grandes van a ser evaluados siguiendo una aritmetica modular,\n",
@@ -322,9 +333,7 @@
         "\n",
         "Se ofrece una demostracion de la encriptacíon hecha por un programa rsa.py que simula la encriptación de datos entre dos usuarios $Alice$, $Bob$ y de un intruso $Chuck$ que no conoce las llaves privadas de ninguno. \n",
         "\n",
-        "El sistema desarrollado hasta ahora es claro solo la versión \"Textbook\" de RSA y  puede ser mejorado usando tecnicas como \"padding\". En la practica de mensajeria, RSA no se usa para codificar el texto, si no para codificar y una sesión que use cifrado simetrico.\n",
-        "\n",
-        "El desarrollo del programa puede ser consultado en nuestro repositorio.\n",
+        "La siguiente entrega incluira mejoras en la velocidad, aleatoriedad en el cálculo/selección de valores, y la implementación del RSA en un chat implementado con sockets. Como el uso de sockets no puede ser ejecutado en Colab (sin configuración extra) el desarrollo del programa puede ser consultado en nuestro repositorio.\n",
         "\n",
         "https://github.com/AlejandroUN/rsaEncryptionChat\n",
         "\n",
@@ -387,12 +396,25 @@
         "            return b\n",
         "        else:\n",
         "            return RSA.gcd(b, a%b)\n",
-        "\n",
+        "            \n",
+        "    # Find inverse using euclid's extended algorithm\n",
         "    def find_inverse(e, totient):\n",
-        "        for x in range(2, totient):\n",
-        "            if (e*x)%totient == 1:\n",
-        "                return x\n",
-        "        return 0\n",
+        "        m0 = totient\n",
+        "        y = 0\n",
+        "        x = 1\n",
+        "        if (totient == 1):\n",
+        "            return 0\n",
+        "        while (e > 1):\n",
+        "            q = e // totient\n",
+        "            t = totient\n",
+        "            totient = e % totient\n",
+        "            e = t\n",
+        "            t = y\n",
+        "            y = x - q * y\n",
+        "            x = t\n",
+        "        if (x < 0):\n",
+        "            x = x + m0\n",
+        "        return x\n",
         "\n",
         "    def fast_exponentiation(base, exponent, modulus):\n",
         "        '''\n",
@@ -471,7 +493,7 @@
         "\n",
         "    print(\"Chuck tries to decrypt alice's msg\", chuck_decrypts_alice)\n",
         "    print(\"Chuck tries to decrypt bob's msg\", chuck_decrypts_bob)\n",
-        "    print(\"Chuck thinks buth alice and bob are from china and soon gives up\")"
+        "    print(\"Chuck thinks both alice and bob are from china and soon gives up\")"
       ],
       "execution_count": null,
       "outputs": [
@@ -507,7 +529,8 @@
         "Conceptos que pueden sonar tan abstractos e incluso irrelevantes a primera vista son la base del desarrolllo moderno.\n",
         "\n",
         "Con conceptos básicos de teoría de números y de software, principalmente de la aritmética modular, se puede hacer un chat de encriptación lo cual de paso a la razón a imaginar las aplicaciones que tendrán conceptos más avanzados de este campo de las matemáticas utilizando mejores herramientas computacionales.\n",
-        "\n"
+        "\n",
+        "El sistema desarrollado hasta ahora es claro solo la versión \"Textbook\" de RSA y  puede ser mejorado usando tecnicas como \"padding\" y juntandolo con otros sistemas de cifrado como AES."
       ]
     },
     {
@@ -519,11 +542,18 @@
         "\n",
         "## 5. Referencias\n",
         "\n",
-        "- Paar, C. and Pelzl, J., 2011. Understanding Cryptography. 1st ed. Berlin: Springer.\n",
+        "- http://www.mat.ucm.es/~arrondo/ten.pdf\n",
         "\n",
-        "- Hoffstein, J., Pipher, J., & Silverman, J. (2010). An introduction to mathematical cryptography. New York, NY: Springer.\n",
+        "- https://therenegadecoder.com/code/understanding-the-number-theory-behind-rsa-encryption/\n",
         "\n",
-        "- Number Theory and Cryptography. Recuperado de http://pi.math.cornell.edu/~mec/2008-2009/Anema/numbertheory/rsa.html\n"
+        "- https://www.appseconnect.com/what-is-the-role-of-rsa-in-ecommerce/#:~:text=RSA%20has%20been%20used%20extensively,commerce%20platform%20such%20as%20Magento.&text=RSA%20is%20the%20first%20algorithm,hard%20without%20the%20private%20key.\n",
+        "\n",
+        "- https://www.comparitech.com/blog/information-security/rsa-encryption/#:~:text=RSA%20is%20still%20seen%20in,and%20establish%20a%20secure%20channel.\n",
+        "\n",
+        "- Paar, C. and Pelzl, J., 2011. Understanding Cryptography. 1st ed. Berlin: Springer, pp.180-182.\n",
+        "Hoffstein, J., Pipher, J., & Silverman, J. (2010). An introduction to mathematical cryptography. New York, NY: Springer.\n",
+        "\n",
+        "- Number Theory and Cryptography. Recuperado de http://pi.math.cornell.edu/~mec/2008-2009/Anema/numbertheory/rsa.html"
       ]
     }
   ]
